@@ -74,7 +74,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.016005
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.016006
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -273,7 +273,7 @@ Cache::FastMmap = 0
 CPAN::Meta = 0
 CPAN::Meta::Prereqs::Diff = 0
 CPAN::Changes::Group::Dependencies::Stats = 0.002002
-CPAN::Changes::Group::Dependencies::Details = 0.001001
+CPAN::Changes::Dependencies::Details = 0.001000
 Net::GitHub = 0
 JSON = 0
 JSON::XS = 0
