@@ -1,6 +1,11 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.016007
+ [Added / runtime recommends]
+ - CPAN::Changes::Dependencies::Details 0.001000
+
+ [Removed / runtime recommends]
+ - CPAN::Changes::Group::Dependencies::Details 0.001001
 
 2.016006 2014-07-30T04:27:01Z
  [Removed / test recommends]
